--- a/renderer/.babelrc
+++ b/renderer/.babelrc
@@ -1,11 +1,19 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    "next/babel"
+  ],
   "plugins": [
     [
       "import",
       {
         "libraryName": "antd",
         "style": "css"
+      }
+    ],
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
       }
     ]
   ]
