--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "antd": "^3.19.2",
+    "axios": "^0.19.0",
     "electron-serve": "^0.3.0",
     "electron-store": "^3.3.0",
     "faker": "^4.1.0",
