--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "faker": "^4.1.0",
     "mobx": "^5.11.0",
     "mobx-react": "^6.1.1",
+    "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
@@ -38,6 +39,7 @@
     "@zeit/next-css": "^1.0.1",
     "arg": "^4.1.0",
     "babel-plugin-import": "^1.12.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "chalk": "^2.4.2",
     "electron": "5.0.3",
     "electron-builder": "20.43.0",
