--- a/renderer/.babelrc
+++ b/renderer/.babelrc
@@ -15,6 +15,12 @@
       {
         "loose": true
       }
+    ],
+    [
+      "styled-components",
+      {
+        "ssr": true
+      }
     ]
   ]
 }
