--- a/v2/.babelrc
+++ b/v2/.babelrc
@@ -1,15 +1,44 @@
 {
-    "presets": [ "env", "stage-3", "react" ],
-    "plugins": [ "transform-decorators-legacy", "transform-class-properties", "transform-runtime", "transform-flow-strip-types" ],
+    "presets": [
+        "env",
+        "stage-3",
+        "react"
+    ],
+    "plugins": [
+        "transform-decorators-legacy",
+        "transform-class-properties",
+        "transform-runtime",
+        "transform-flow-strip-types",
+        [
+            "import",
+            {
+                "libraryName": "antd",
+                "style": "css"
+            }
+        ],
+        [
+            "styled-components",
+            {
+                "ssr": true
+            }
+        ]
+    ],
     "env": {
         "production": {
-            "plugins": [ "styled-components" ]
+            "plugins": [
+                "styled-components"
+            ]
         },
         "test": {
-            "plugins": [ "styled-components" ]
+            "plugins": [
+                "styled-components"
+            ]
         },
         "development": {
-            "plugins": [ "styled-components", "react-hot-loader/babel" ]
+            "plugins": [
+                "styled-components",
+                "react-hot-loader/babel"
+            ]
         }
     }
 }
