--- a/v2/package.json
+++ b/v2/package.json
@@ -33,9 +33,13 @@
         "setupTestFrameworkScriptFile": "<rootDir>setupTests.js"
     },
     "dependencies": {
+        "antd": "^3.20.5",
+        "babel-plugin-import": "^1.12.0",
         "babel-runtime": "6.26.0",
+        "css-loader": "^3.1.0",
         "electron-devtools-installer": "2.2.4",
-        "history": "4.7.2"
+        "history": "4.7.2",
+        "style-loader": "^0.23.1"
     },
     "devDependencies": {
         "babel-core": "6.26.3",
@@ -82,7 +86,7 @@
         "react-router": "4.2.0",
         "react-router-dom": "4.2.2",
         "rimraf": "2.6.2",
-        "styled-components": "3.2.6",
+        "styled-components": "^4.3.2",
         "webpack": "4.8.3",
         "webpack-cli": "2.1.4",
         "webpack-dev-server": "3.1.4"
