--- a/v2/package.json
+++ b/v2/package.json
@@ -33,12 +33,12 @@
         "setupTestFrameworkScriptFile": "<rootDir>setupTests.js"
     },
     "dependencies": {
-        "antd": "^3.20.5",
+        "antd": "^3.20.7",
         "babel-plugin-import": "^1.12.0",
         "babel-runtime": "6.26.0",
         "css-loader": "^3.1.0",
         "electron-devtools-installer": "2.2.4",
-        "history": "4.7.2",
+        "history": "^4.9.0",
         "style-loader": "^0.23.1"
     },
     "devDependencies": {
@@ -78,10 +78,10 @@
         "html-webpack-plugin": "3.2.0",
         "jest": "22.4.4",
         "jest-enzyme": "6.0.0",
-        "mobx": "4.3.0",
-        "mobx-react": "5.1.2",
-        "react": "16.4.0",
-        "react-dom": "16.4.0",
+        "mobx": "^5.11.0",
+        "mobx-react": "^6.1.1",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
         "react-hot-loader": "4.2.0",
         "react-router": "4.2.0",
         "react-router-dom": "4.2.2",
@@ -89,6 +89,6 @@
         "styled-components": "^4.3.2",
         "webpack": "4.8.3",
         "webpack-cli": "2.1.4",
-        "webpack-dev-server": "3.1.4"
+        "webpack-dev-server": "^3.7.2"
     }
 }
