--- a/v2/package.json
+++ b/v2/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "antd": "^3.20.7",
+        "axios": "^0.19.0",
         "babel-plugin-import": "^1.12.0",
         "babel-runtime": "6.26.0",
         "css-loader": "^3.1.0",
