--- a/v2/package.json
+++ b/v2/package.json
@@ -83,9 +83,10 @@
         "mobx-react": "^6.1.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-helmet": "^5.2.1",
         "react-hot-loader": "4.2.0",
-        "react-router": "4.2.0",
-        "react-router-dom": "4.2.2",
+        "react-router": "^5.0.1",
+        "react-router-dom": "^5.0.1",
         "rimraf": "2.6.2",
         "styled-components": "^4.3.2",
         "webpack": "4.8.3",
