--- a/package.json
+++ b/package.json
@@ -1,55 +1,96 @@
 {
-  "private": true,
-  "name": "capi-gui",
-  "description": "My application description",
-  "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
-  "main": "app/background.js",
-  "build": {
-    "appId": "com.example.nextron",
-    "productName": "My Nextron App",
-    "copyright": "Copyright © 2018 Yoshihide Shiono",
-    "directories": {
-      "output": "dist",
-      "buildResources": "resources"
+    "name": "electron-react-mobx-boilerplate",
+    "description": "Fast and up-to-date starter codebase for using Electron, React and MobX together. Minimalistic start, rapid prototyping, no bulls**t.",
+    "version": "1.0.0",
+    "author": {
+        "name": "niederschlag",
+        "email": "hello@krkn.co"
     },
-    "publish": null
-  },
-  "scripts": {
-    "dev": "node nextron/nextron.js",
-    "build": "node nextron/nextron.js build",
-    "build:mac": "nextron build --mac --x64",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "dependencies": {
-    "antd": "^3.19.2",
-    "axios": "^0.19.0",
-    "electron-serve": "^0.3.0",
-    "electron-store": "^4.0.0",
-    "faker": "^4.1.0",
-    "mobx": "^5.11.0",
-    "mobx-react": "^6.1.1",
-    "nprogress": "^0.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "styled-components": "^4.3.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@zeit/next-css": "^1.0.1",
-    "arg": "^4.1.0",
-    "babel-plugin-import": "^1.12.0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "chalk": "^2.4.2",
-    "electron": "5.0.3",
-    "electron-builder": "20.43.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "fs-extra": "^8.0.1",
-    "next": "8.1.0",
-    "node-npx": "^1.3.1",
-    "ora": "^3.4.0",
-    "webpack": "4.29.0",
-    "webpack-merge": "^4.2.1"
-  }
+    "scripts": {
+        "dev": "concurrently -k \"yarn dev:serve\" \"yarn dev:electron\"",
+        "dev:serve": "cross-env NODE_ENV=development webpack-dev-server --hot",
+        "dev:electron": "cross-env NODE_ENV=development electron index",
+        "build": "yarn private:clean && yarn build:dist && yarn build:wl",
+        "build:dev": "yarn private:clean && yarn build:dist && yarn build:wl --dir",
+        "build:dev:l": "yarn private:clean && yarn build:dist && yarn build:l --dir",
+        "build:dev:w": "yarn private:clean && yarn build:dist && yarn build:w --dir",
+        "build:dist": "cross-env NODE_ENV=production webpack --config webpack.production.config.js",
+        "build:wl": "build -wl",
+        "build:w": "build -w",
+        "build:l": "build -l",
+        "build:m": "build -m",
+        "private:clean": "yarn rimraf build dist",
+        "test": "jest"
+    },
+    "keywords": [
+        "electron",
+        "react",
+        "mobx",
+        "boilerplate"
+    ],
+    "license": "MIT",
+    "jest": {
+        "setupTestFrameworkScriptFile": "<rootDir>setupTests.js"
+    },
+    "dependencies": {
+        "antd": "^3.20.7",
+        "axios": "^0.19.0",
+        "babel-plugin-import": "^1.12.0",
+        "babel-runtime": "6.26.0",
+        "css-loader": "^3.1.0",
+        "electron-devtools-installer": "2.2.4",
+        "history": "^4.9.0",
+        "style-loader": "^0.23.1"
+    },
+    "devDependencies": {
+        "babel-core": "6.26.3",
+        "babel-eslint": "8.2.3",
+        "babel-jest": "22.4.4",
+        "babel-loader": "7.1.4",
+        "babel-plugin-dev-expression": "0.2.1",
+        "babel-plugin-styled-components": "1.5.1",
+        "babel-plugin-transform-class-properties": "6.24.1",
+        "babel-plugin-transform-decorators-legacy": "1.3.4",
+        "babel-plugin-transform-flow-strip-types": "6.22.0",
+        "babel-plugin-transform-runtime": "6.23.0",
+        "babel-preset-env": "1.7.0",
+        "babel-preset-mobx": "1.0.2",
+        "babel-preset-react": "6.24.1",
+        "babel-preset-stage-3": "6.24.1",
+        "concurrently": "3.5.1",
+        "cross-env": "5.1.6",
+        "devtron": "1.4.0",
+        "electron": "2.0.2",
+        "electron-builder": "20.14.7",
+        "enzyme": "3.3.0",
+        "enzyme-adapter-react-16": "1.1.1",
+        "eslint": "4.19.1",
+        "eslint-config-airbnb": "16.1.0",
+        "eslint-formatter-pretty": "1.3.0",
+        "eslint-import-resolver-webpack": "0.10.0",
+        "eslint-plugin-flowtype": "2.47.1",
+        "eslint-plugin-import": "2.12.0",
+        "eslint-plugin-jest": "21.15.2",
+        "eslint-plugin-jsx-a11y": "6.0.3",
+        "eslint-plugin-promise": "3.7.0",
+        "eslint-plugin-react": "7.8.2",
+        "flow-bin": "0.72.0",
+        "flow-webpack-plugin": "1.2.0",
+        "html-webpack-plugin": "3.2.0",
+        "jest": "22.4.4",
+        "jest-enzyme": "6.0.0",
+        "mobx": "^5.11.0",
+        "mobx-react": "^6.1.1",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-helmet": "^5.2.1",
+        "react-hot-loader": "4.2.0",
+        "react-router": "^5.0.1",
+        "react-router-dom": "^5.0.1",
+        "rimraf": "2.6.2",
+        "styled-components": "^4.3.2",
+        "webpack": "4.8.3",
+        "webpack-cli": "2.1.4",
+        "webpack-dev-server": "^3.7.2"
+    }
 }
