--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jest": {
         "setupTestFrameworkScriptFile": "<rootDir>setupTests.js"
     },
-    "dependencies": {
+    "devDependencies": {
         "antd": "^3.20.7",
         "axios": "^0.19.0",
         "babel-plugin-import": "^1.12.0",
@@ -40,9 +40,7 @@
         "css-loader": "^3.1.0",
         "electron-devtools-installer": "2.2.4",
         "history": "^4.9.0",
-        "style-loader": "^0.23.1"
-    },
-    "devDependencies": {
+        "style-loader": "^0.23.1",
         "babel-core": "6.26.3",
         "babel-eslint": "8.2.3",
         "babel-jest": "22.4.4",
